# grad

./: .gitignore  Cargo.toml  README.md  example.ai  gg.ai  minimal.ai  test.ai
docs/: ai.d.ts  ai_bg.js  ai_bg.wasm  index.html  package.json
examples/: intro.ai  intro.grad  micro.grad
pkg/: README.md  ai.js  ai_bg.wasm.d.ts
src/: ast.rs  chunk.rs  compiler.rs  debug.rs  expr.rs  interner.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs  scanner.rs  tensor.rs  value.rs  vm.rs
tests/: loc.rs
ui/: Cargo.toml  index.html
ui/assets/: sw.js
ui/src/: app.rs  lib.rs  main.rs
web/: bun.lockb  next.config.mjs  package-lock.json  package.json
web/app/: Editor.tsx  page.tsx
