[package]
name = "ai"
version = "0.1.0"
edition = "2021"
description = "A programming language with built-in autograd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "color"] }
logos = "0.14.0"
wasm-bindgen = "0.2.92"
tokei = "12.1.2"
thiserror = "1.0.59"
colored = "2.1.0"

[lib]
crate-type = ["cdylib"]